--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="app.js"></script>
     <script src="controller.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=.75"/>
 </header>
 
 <body ng-app="app" ng-controller="controller">
